--- a/BoostedHP/DESCRIPTION
+++ b/BoostedHP/DESCRIPTION
@@ -4,7 +4,7 @@ Title: iterated HP-filter produciton
 Version: 0.0.5
 Author: Chen Yang
 Maintainer: Chen Yang <chen_yang@link.cuhk.edu.hk>
-Description: This is an accompanying repository for the paper Peter Phillips and Zhentao Shi (2018): "Boosting the Hodrick-Prescott Filter" (to provide the arxiv link)
+Description: This is an accompanying repository for the paper Peter Phillips and Zhentao Shi (2019): "Boosting the Hodrick-Prescott Filter"
 License: MIT
 Encoding: UTF-8
 LazyData: true
