--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,15 @@
 Package: bHP
 Type: Package
-Title: Iterative HP-filter refitting
-Version: 0.0.7
+Title: Boosted HP filter
+Version: 1.0.0
 Authors@R: c(
     person("Yang", "Chen", role = c("aut", "cre"), email = "chen_yang@link.cuhk.edu.hk"),
     person("Zhentao", "Shi", role = c("aut"), email = "shizhentao@gmail.com" )
     )
-Description: This is an accompanying repository for the paper Peter Phillips and Zhentao Shi (2019): "Boosting the Hodrick-Prescott Filter"
+Description: R package for the boosted HP filter, in 
+  Peter Phillips and Zhentao Shi (2019): 
+  "Boosting: Why you can use the HP filter." 
+  arXiv: 1905.00175, Cowles Foundation Discussion Paper No.2192.
 License: MIT
 Encoding: UTF-8
 LazyData: true
